<resources>
    <string name="app_name">JCar</string>
    <string name="bienvenido_a_j5_automoci_n">Bienvenido a J5 Automoción</string>
    <string name="escriba_la_contrase_a">Escriba la contraseña</string>
    <string name="escriba_su_correo">Escriba su correo</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="titulos">Titulos</string>
    <string name="matricula">Matricula</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="motor">Motor</string>
    <string name="guardar_coche">Guardar Coche</string>
    <string name="button">Button</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="restablecer_contrase_a">Restablecer Contraseña</string>
    <string name="imagenregistro">ImagenRegistro</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="email">Email</string>
    <string name="introduza_su_correo">Introduza su correo</string>
    <string name="registrar">Registrar</string>
    <string name="cocheinc">CocheInc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estado">Estado</string>
    <string name="Motor">Motor</string>
    <string name="buscar_usuario">Buscar Usuario</string>
    <string name="correo_del_usuario">Correo del usuario</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="crear">Crear</string>
    <string name="tus_vehiculos">Tus Vehiculos</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="borrar">Borrar</string>
    <string name="restablecer_contrase_a1">Restablecer Contraseña</string>
    <string name="restablece_tu_contrase_a">Restablece tu contraseña</string>
    <string name="reseteocontra">ReseteoContra</string>
    <string name="menu">Menu</string>
    <string name="logoempresa">logoEmpresa</string>
</resources>