<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".Menu1">

    <Button
        android:id="@+id/bt_CrearC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/black"
        android:onClick="CrearCoche"
        android:text="@string/crear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_Mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:onClick="MostrarV"
        android:text="@string/tus_vehiculos"
        app:layout_constraintEnd_toEndOf="@+id/bt_CrearC"
        app:layout_constraintStart_toStartOf="@+id/bt_CrearC"
        app:layout_constraintTop_toBottomOf="@+id/bt_CrearC" />

    <Button
        android:id="@+id/btVehiculosAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="MostrarCAdmin"
        android:text="@string/vehiculos"
        app:layout_constraintEnd_toEndOf="@+id/bt_Mostrar"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="@+id/bt_Mostrar"
        app:layout_constraintTop_toBottomOf="@+id/bt_Mostrar" />

    <TextView
        android:id="@+id/txtAuten"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/cerrar_sesion"
        android:onClick="CerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btMantenimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Mantenimientos"
        android:onClick="Mantemientos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btVehiculosAdmin" />
</androidx.constraintlayout.widget.ConstraintLayout>