<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MostrarCocheDatos">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMatriculaMos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:layout_marginTop="88dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_NombreMatricula"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/matricula"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMarcaMos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/txtMatriculaMos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtMatriculaMos"
        app:layout_constraintTop_toBottomOf="@+id/txtMatriculaMos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_NombreMarca"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/marca"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtModeloMos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/txtMarcaMos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtMarcaMos"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcaMos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_NombreModelo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/modelo"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEstadoMos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="65dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/txtMotorMos"
        app:layout_constraintStart_toStartOf="@+id/txtMotorMos"
        app:layout_constraintTop_toBottomOf="@+id/txtMotorMos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_NombreEstado"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/estado"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMotorMos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="65dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/txtModeloMos"
        app:layout_constraintStart_toStartOf="@+id/txtModeloMos"
        app:layout_constraintTop_toBottomOf="@+id/txtModeloMos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_NombreMotor"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/Motor"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_Eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/black"
        android:text="@string/eliminar"
        android:onClick="ElimnarCoche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_info"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtCorreoMos"
        android:layout_width="179dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_info"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="317dp"
        android:layout_height="111dp"
        android:autofillHints="no"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/txtEstadoMos"
        app:layout_constraintStart_toStartOf="@+id/txtEstadoMos"
        app:layout_constraintTop_toBottomOf="@+id/txtEstadoMos"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>