<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".CrearCoche1">

    <ImageView
        android:id="@+id/ImagenCoche"
        android:layout_width="197dp"
        android:layout_height="106dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/cocheinc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pruebacoche" />

    <TextView
        android:id="@+id/txtCorreoA"
        android:layout_width="142dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMatricula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImagenCoche">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Matricula"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/matricula"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMotor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="331dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_modelo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Motor"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/motor"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_GuardarC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/black"
        android:onClick="GuardarCoche"
        android:text="@string/guardar_coche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMotor" />

    <Spinner
        android:id="@+id/sp_marca"
        android:layout_width="338dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMatricula"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sp_modelo"
        android:layout_width="340dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_marca"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>